Add implict solver for diagnostic EDMF

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -582,6 +582,14 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":genie: Diagnostic EDMFX DYCOMS_RF01 in a box (explicit)"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/diagnostic_edmfx_dycoms_rf01_explicit_box.yml
+        artifact_paths: "diagnostic_edmfx_dycoms_rf01_explicitbox/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":genie: Diagnostic EDMFX DYCOMS_RF01 in a box"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
