--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -246,6 +246,9 @@ prognostic_surface:
 implicit_diffusion:
   help: "Whether to treat the vertical diffusion tendency implicitly [`false` (default), `true`]"
   value: false
+approximate_linear_solve_iters:
+  help: "Number of iterations for the approximate linear solve (used when `implicit_diffusion` is true)"
+  value: 1
 override_τ_precip:
   help: "If true, sets τ_precip to dt. Otherwise, τ_precip is set to the value in the toml dictionary"
   value: true
