--- a/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
+++ b/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
@@ -1,4 +1,3 @@
-
 job_id: "diagnostic_edmfx_bomex_stretched_box"
 initial_condition: "Bomex" 
 subsidence: "Bomex" 
@@ -6,6 +5,8 @@ edmf_coriolis: "Bomex"
 ls_adv: "Bomex" 
 surface_setup: "Bomex"
 turbconv: "diagnostic_edmfx" 
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
 prognostic_tke: true
 edmfx_upwinding: "first_order" 
 edmfx_entr_model: "Generalized" 
