--- a/config/perf_configs/flame_perf_target_diagnostic_edmfx.yml
+++ b/config/perf_configs/flame_perf_target_diagnostic_edmfx.yml
@@ -1,9 +1,10 @@
 dt_save_to_disk: "600secs"
+vert_diff: "false"
+turbconv: "diagnostic_edmfx"
 edmfx_entr_model: "Generalized"
+edmfx_detr_model: "Generalized"
 edmfx_nh_pressure: true
 edmfx_upwinding: "first_order"
 prognostic_tke: true
 edmfx_sgs_flux: true
-turbconv: "diagnostic_edmfx"
 job_id: "flame_perf_target_diagnostic_edmfx"
-edmfx_detr_model: "Generalized"
