--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -261,3 +261,6 @@ output_default_diagnostics:
 netcdf_interpolate_z_over_msl:
   help: "Interpolate diagnostics in the NetCDF files in such a way that `z` is the elevation from the sea level (as opposed to the elevation from the surface)"
   value: false
+warn_allocations_diagnostics:
+  help: "When true, a dry-run for all the diagnostics is perform to check whether the functions allocate additional memory (which reduces performances)"
+  value: false
