change more diagnostic edmf cases to implicit

--- a/config/model_configs/diagnostic_edmfx_rico_box.yml
+++ b/config/model_configs/diagnostic_edmfx_rico_box.yml
@@ -4,6 +4,8 @@ subsidence: Rico
 ls_adv: Rico
 surface_setup: Rico
 turbconv: diagnostic_edmfx
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
 prognostic_tke: true
 edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized" 
@@ -15,15 +17,15 @@ moist: equil
 precip_model: "0M"
 config: box
 hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
+kappa_4: 1e21
+x_max: 1e8
+y_max: 1e8
 x_elem: 2
 y_elem: 2
 z_elem: 100
 z_max: 4e3
 z_stretch: false
-dt: 10secs
+dt: 200secs
 t_end: 8hours
 dt_save_to_disk: 10mins
 toml: [toml/diagnostic_edmfx_trmm_box.toml]
