--- a/config/model_configs/diagnostic_edmfx_trmm_box.yml
+++ b/config/model_configs/diagnostic_edmfx_trmm_box.yml
@@ -3,6 +3,8 @@ initial_condition: TRMM_LBA
 rad: TRMM_LBA
 surface_setup: TRMM_LBA
 turbconv: diagnostic_edmfx
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
 prognostic_tke: true
 edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized" 
@@ -16,15 +18,15 @@ precip_model: "0M"
 override_τ_precip: false
 config: box
 hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
+kappa_4: 1e21
+x_max: 1e8
+y_max: 1e8
 x_elem: 2
 y_elem: 2
 z_elem: 82
 z_max: 16400
 z_stretch: false
-dt: 10secs
+dt: 600secs
 t_end: 6hours
 dt_save_to_disk: 10mins
 FLOAT_TYPE: "Float64"
