--- a/config/model_configs/diagnostic_edmfx_trmm_stretched_box.yml
+++ b/config/model_configs/diagnostic_edmfx_trmm_stretched_box.yml
@@ -4,6 +4,9 @@ initial_condition: TRMM_LBA
 rad: TRMM_LBA
 surface_setup: TRMM_LBA
 turbconv: diagnostic_edmfx
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
+max_newton_iters_ode: 1
 prognostic_tke: true
 edmfx_upwinding: first_order
 edmfx_entr_model: "Generalized" 
@@ -17,16 +20,16 @@ precip_model: "0M"
 override_τ_precip: false
 config: box
 hyperdiff: "true"
-kappa_4: 1e12
-x_max: 1e5
-y_max: 1e5
+kappa_4: 1e21
+x_max: 1e8
+y_max: 1e8
 x_elem: 2
 y_elem: 2
-z_elem: 20
+z_elem: 30
 z_max: 16400
-dz_bottom: 100
+dz_bottom: 50
 dz_top: 2000
-dt: 10secs
+dt: 600secs
 t_end: 6hours
 dt_save_to_disk: 10mins
 FLOAT_TYPE: "Float64"
