add vertical divergence to diagnostic edmf detrainment

--- a/toml/diagnostic_edmfx_box.toml
+++ b/toml/diagnostic_edmfx_box.toml
@@ -1,6 +1,6 @@
 [entr_tau]
 alias = "entr_tau"
-value = 0.001
+value = 0.002
 type = "float"
 
 [entr_coeff]
@@ -15,7 +15,12 @@ type = "float"
 
 [detr_buoy_coeff]
 alias = "detr_buoy_coeff"
-value = 0
+value = 0.12
+type = "float"
+
+[detr_vertdiv_coeff]
+alias = "detr_vertdiv_coeff"
+value = 0.6
 type = "float"
 
 [min_area_limiter_scale]
