--- a/toml/diagnostic_edmfx_trmm_box.toml
+++ b/toml/diagnostic_edmfx_trmm_box.toml
@@ -5,7 +5,7 @@ type = "float"
 
 [entr_tau]
 alias = "entr_tau"
-value = 0.001
+value = 0.002
 type = "float"
 
 [entr_coeff]
@@ -16,6 +16,11 @@ type = "float"
 [detr_tau]
 alias = "detr_tau"
 value = 0
+type = "float"
+
+[detr_vertdiv_coeff]
+alias = "detr_vertdiv_coeff"
+value = 0.6
 type = "float"
 
 [detr_buoy_coeff]
@@ -30,5 +35,5 @@ type = "float"
 
 [max_area_limiter_scale]
 alias = "max_area_limiter_scale"
-value = 0.01
+value = 0
 type = "float"
