modified:   config/default_configs/default_config.yml 	modified:   config/model_configs/box_density_current_test.yml 	modified:   src/ClimaAtmos.jl 	modified:   src/cache/cache.jl 	modified:   src/prognostic_equations/remaining_tendency.jl 	modified:   src/solver/model_getters.jl 	modified:   src/solver/type_getters.jl 	modified:   src/solver/types.jl

--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -189,6 +189,10 @@ perf_summary:
 viscous_sponge:
   help: "Viscous sponge [`true`, `false` (default)]"
   value: false
+smagorinsky_lilly:
+  value: false
+c_smag: 
+  value: 0.2
 job_id:
   help: "Uniquely identifying string for a particular job"
   value: ~
