--- a/Project.toml
+++ b/Project.toml
@@ -63,7 +63,7 @@ DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5, 1"
 ImageFiltering = "0.7"
 Insolation = "0.8"
-Interpolations = "0.14"
+Interpolations = "0.14, 0.15"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
 LinearAlgebra = "1"
