--- a/config/gpu_configs/gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process.yml
+++ b/config/gpu_configs/gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km_4process.yml
@@ -1,6 +1,6 @@
 dt_save_to_disk: "10days"
 dt: "100secs"
-t_end: "1days"
+t_end: "400secs"
 h_elem: 30
 z_elem: 63
 dz_bottom: 30.0
@@ -12,5 +12,6 @@ moist: "equil"
 precip_model: "0M"
 rayleigh_sponge: true
 forcing: "held_suarez"
+hyperdiff: "false"
 job_id: "gpu_hs_rhoe_equilmoist_nz63_0M_55km_rs35km"
 toml: [toml/longrun_hs_rhoe_equilmoist_nz63_0M_55km_rs35km.toml]
