--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -751,6 +751,7 @@ steps:
         artifact_paths: "target_gpu_implicit_baroclinic_wave/*"
         agents:
           slurm_gpus: 1
+          slurm_mem: 32G
 
       - label: "GPU: GPU dry baroclinic wave - 4 gpus"
         key: "target_gpu_implicit_baroclinic_wave_4process"
