--- a/Project.toml
+++ b/Project.toml
@@ -49,12 +49,12 @@ ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.25"
+CPUSummary = "0.2"
 ClimaComms = "0.5.6"
 ClimaCore = "0.11.5"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
-CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
@@ -68,7 +68,7 @@ IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
 LinearAlgebra = "1"
 Logging = "1"
-NCDatasets = "0.11, 0.12, 0.13"
+NCDatasets = "0.11, 0.12, 0.13, 0.14"
 NVTX = "0.3"
 Pkg = "1.8"
 Printf = "1"
