--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equilmoist_nz63_0M_55km_rs35km_clearsky_earth.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equilmoist_nz63_0M_55km_rs35km_clearsky_earth.yml
@@ -10,7 +10,8 @@ z_max: 55000.0
 rayleigh_sponge: true
 topography: "Earth"
 topo_smoothing: true
-kappa_4: 4.0e16
+kappa_4_vorticity: 4.0e16
+kappa_4_tracer: 4.0e16
 moist: "equil"
 precip_model: "0M"
 surface_setup: "DefaultMoninObukhov"
