--- a/config/model_configs/prognostic_edmfx_adv_test_box.yml
+++ b/config/model_configs/prognostic_edmfx_adv_test_box.yml
@@ -7,7 +7,8 @@ edmfx_upwinding: "first_order"
 config: "box"
 moist: "equil"
 hyperdiff: "true"
-kappa_4: 1e8
+kappa_4_vorticity: 1e8
+kappa_4_tracer: 1e8
 x_max: 1e4
 y_max: 1e4
 z_max: 5.5e4
