--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft32_earth.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft32_earth.yml
@@ -11,7 +11,8 @@ dz_bottom: 30.0
 vert_diff: "true"
 h_elem: 16
 use_reference_state: false
-kappa_4: 3.0e16
+kappa_4_vorticity: 3.0e16
+kappa_4_tracer: 3.0e16
 FLOAT_TYPE: "Float32"
 precip_model: "0M"
 topography: "Earth"
