--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equilmoist_nz63_0M_55km_rs35km_clearsky_tvinsolation.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equilmoist_nz63_0M_55km_rs35km_clearsky_tvinsolation.yml
@@ -8,7 +8,8 @@ dz_bottom: 30.0
 dz_top: 3000.0
 z_max: 55000.0
 rayleigh_sponge: true
-kappa_4: 2.0e16
+kappa_4_vorticity: 2.0e16
+kappa_4_tracer: 2.0e16
 moist: "equil"
 precip_model: "0M"
 surface_setup: "DefaultMoninObukhov"
