--- a/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
@@ -5,7 +5,8 @@ dt: "300secs"
 t_end: "100days"
 dz_bottom: 30.0
 h_elem: 16
-kappa_4: 1.0e16
+kappa_4_vorticity: 1.0e16
+kappa_4_tracer: 1.0e16
 precip_model: "0M"
 job_id: "longrun_bw_rhoe_equil_highres"
 moist: "equil"
