--- a/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
@@ -7,7 +7,8 @@ t_end: "100days"
 dz_bottom: 30.0
 h_elem: 16
 ode_algo: "SSP333"
-kappa_4: 1.0e16
+kappa_4_vorticity: 1.0e16
+kappa_4_tracer: 1.0e16
 precip_model: "0M"
 job_id: "longrun_ssp_bw_rhoe_equil_highres"
 moist: "equil"
