--- a/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
+++ b/config/model_configs/diagnostic_edmfx_bomex_stretched_box.yml
@@ -17,7 +17,8 @@ edmfx_sgs_diffusive_flux: true
 moist: "equil"
 config: "box" 
 hyperdiff: "true" 
-kappa_4: 1e21
+kappa_4_vorticity: 1e21
+kappa_4_tracer: 1e21
 x_max: 1e8 
 y_max: 1e8 
 x_elem: 2 
