--- a/config/model_configs/diagnostic_edmfx_test_box.yml
+++ b/config/model_configs/diagnostic_edmfx_test_box.yml
@@ -10,7 +10,8 @@ turbconv: "diagnostic_edmfx"
 x_elem: 2
 dz_bottom: 30.0
 config: "box"
-kappa_4: 1.0e8
+kappa_4_vorticity: 1.0e8
+kappa_4_tracer: 1.0e8
 job_id: "diagnostic_edmfx_test_box"
 moist: "equil"
 toml: [toml/diagnostic_edmfx_box.toml]
