--- a/config/model_configs/plane_density_current_test.yml
+++ b/config/model_configs/plane_density_current_test.yml
@@ -8,7 +8,8 @@ discrete_hydrostatic_balance: true
 z_stretch: false
 x_elem: 80
 config: "plane"
-kappa_4: 1.0e7
+kappa_4_vorticity: 1.0e7
+kappa_4_tracer: 1.0e7
 z_max: 6400.0
 job_id: "plane_density_current_test"
 diagnostics:
