--- a/config/model_configs/prognostic_edmfx_gabls_box.yml
+++ b/config/model_configs/prognostic_edmfx_gabls_box.yml
@@ -13,7 +13,8 @@ prognostic_tke: true
 moist: "equil"
 config: "box"
 hyperdiff: "true"
-kappa_4: 1e12
+kappa_4_vorticity: 1e12
+kappa_4_tracer: 1e12
 x_max: 1e5
 y_max: 1e5
 z_max: 400
