Remove save_restart, rename save_to_disk
Without the diagnostics, save_to_disk and save_restart become identical.
This commit removes save_restart and renames save_to_disk to a more
descriptive and clear save_state_to_disk. This state is used for
restarts or to inspect the content of the state

--- a/config/longrun_configs/longrun_aquaplanet_amip.yml
+++ b/config/longrun_configs/longrun_aquaplanet_amip.yml
@@ -21,7 +21,7 @@ edmfx_nh_pressure: true
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 rayleigh_sponge: true
-dt_save_to_disk: "3hours"
+dt_save_state_to_disk: "3hours"
 dt: "5secs" 
 t_end: "1days"
 FLOAT_TYPE: "Float32"
