--- a/config/longrun_configs/longrun_sphere_hydrostatic_balance_rhoe.yml
+++ b/config/longrun_configs/longrun_sphere_hydrostatic_balance_rhoe.yml
@@ -7,5 +7,5 @@ kappa_4_tracer: 1.0e16
 perturb_initstate: false 
 discrete_hydrostatic_balance: true 
 t_end: "800days" 
-dt_save_to_disk: "10days" 
+dt_save_state_to_disk: "10days" 
 job_id: "longrun_sphere_hydrostatic_balance_rhoe"
