--- a/config/model_configs/prognostic_edmfx_adv_test_box.yml
+++ b/config/model_configs/prognostic_edmfx_adv_test_box.yml
@@ -19,6 +19,6 @@ dz_bottom: 30.0
 dz_top: 3000.0
 dt: "10secs"
 t_end: "3600secs"
-dt_save_to_disk: "100secs"
+dt_save_state_to_disk: "100secs"
 FLOAT_TYPE: "Float64"
 toml: [toml/prognostic_edmfx_box_advection.toml]
