--- a/config/model_configs/prognostic_edmfx_gabls_box.yml
+++ b/config/model_configs/prognostic_edmfx_gabls_box.yml
@@ -24,6 +24,6 @@ z_elem: 8
 z_stretch: false
 dt: "5secs"
 t_end: "9hours"
-dt_save_to_disk: "10mins"
+dt_save_state_to_disk: "10mins"
 perturb_initstate: false
 toml: [toml/prognostic_edmfx_box.toml]
