--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64.yml
@@ -1,5 +1,5 @@
 moist: "equil"
-dt_save_to_disk: "5days"
+dt_save_state_to_disk: "5days"
 check_conservation: true
 initial_condition: "MoistBaroclinicWave"
 t_end: "5days"
