--- a/config/model_configs/sphere_hydrostatic_balance_rhoe_ft64.yml
+++ b/config/model_configs/sphere_hydrostatic_balance_rhoe_ft64.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "8days"
+dt_save_state_to_disk: "8days"
 use_reference_state: false
 t_end: "8days"
 discrete_hydrostatic_balance: true
