--- a/config/perf_configs/flame_sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.yml
+++ b/config/perf_configs/flame_sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.yml
@@ -6,7 +6,7 @@ precip_model: "0M"
 vert_diff: "true"
 z_elem: 20
 dz_bottom: 100
-dt_save_to_disk: "12hours"
+dt_save_state_to_disk: "12hours"
 initial_condition: "MoistBaroclinicWave"
 dt: "40secs"
 t_end: "12hours"
