--- a/config/perf_configs/gpu_baroclinic_wave_rhoe.yml
+++ b/config/perf_configs/gpu_baroclinic_wave_rhoe.yml
@@ -1,6 +1,6 @@
 job_id: "gpu_baroclinic_wave_rhoe" 
 dt: "400secs"
 t_end: "10days" 
-dt_save_to_disk: "2days" 
+dt_save_state_to_disk: "2days" 
 initial_condition: "DryBaroclinicWave" 
 dt_save_to_sol: "Inf"
