--- a/config/perf_configs/gpu_held_suarez_rhoe_hightop.yml
+++ b/config/perf_configs/gpu_held_suarez_rhoe_hightop.yml
@@ -5,4 +5,4 @@ forcing: "held_suarez"
 job_id: "gpu_held_suarez_rhoe_hightop" 
 dt: "400secs"
 t_end: "8days" 
-dt_save_to_disk: "4days"
+dt_save_state_to_disk: "4days"
