--- a/config/perf_configs/gpu_implicit_barowave_wrt_h_elem.yml
+++ b/config/perf_configs/gpu_implicit_barowave_wrt_h_elem.yml
@@ -5,4 +5,4 @@ initial_condition: DryBaroclinicWave
 t_end: 1mins 
 dt: 1secs 
 dt_save_to_sol: Inf 
-dt_save_to_disk: Inf
+dt_save_state_to_disk: Inf
