--- a/config/longrun_configs/longrun_bw_rhoe_equil_highres_topography_earth.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_equil_highres_topography_earth.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "10days"
+dt_save_state_to_disk: "10days"
 rayleigh_sponge: true
 topo_smoothing: true
 initial_condition: "MoistBaroclinicWave"
