--- a/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "10days"
+dt_save_state_to_disk: "10days"
 initial_condition: "MoistBaroclinicWave"
 max_newton_iters_ode: 3
 z_elem: 45
