--- a/config/model_configs/diagnostic_edmfx_dycoms_rf01_explicit_box.yml
+++ b/config/model_configs/diagnostic_edmfx_dycoms_rf01_explicit_box.yml
@@ -26,5 +26,5 @@ z_max: 1500
 z_stretch: false
 dt: 20secs 
 t_end: 4hours 
-dt_save_to_disk: 10mins
+dt_save_state_to_disk: 10mins
 toml: [toml/diagnostic_edmfx_box.toml]
