--- a/config/model_configs/diagnostic_edmfx_rico_box.yml
+++ b/config/model_configs/diagnostic_edmfx_rico_box.yml
@@ -28,5 +28,5 @@ z_max: 4e3
 z_stretch: false
 dt: 100secs
 t_end: 8hours
-dt_save_to_disk: 10mins
+dt_save_state_to_disk: 10mins
 toml: [toml/diagnostic_edmfx_trmm_box.toml]
