--- a/config/model_configs/diagnostic_edmfx_trmm_box.yml
+++ b/config/model_configs/diagnostic_edmfx_trmm_box.yml
@@ -29,6 +29,6 @@ z_max: 16400
 z_stretch: false
 dt: 200secs
 t_end: 6hours
-dt_save_to_disk: 10mins
+dt_save_state_to_disk: 10mins
 FLOAT_TYPE: "Float64"
 toml: [toml/diagnostic_edmfx_trmm_box.toml]
