--- a/config/model_configs/plane_density_current_test.yml
+++ b/config/model_configs/plane_density_current_test.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "3600secs"
+dt_save_state_to_disk: "3600secs"
 initial_condition: "DryDensityCurrentProfile"
 x_max: 51200.0
 z_elem: 90
