--- a/config/model_configs/prognostic_edmfx_bomex_stretched_box.yml
+++ b/config/model_configs/prognostic_edmfx_bomex_stretched_box.yml
@@ -28,5 +28,5 @@ dz_top: 200.0
 perturb_initstate: false
 dt: "10secs"
 t_end: "6hours"
-dt_save_to_disk: "10mins"
+dt_save_state_to_disk: "10mins"
 toml: [toml/prognostic_edmfx_bomex_box.toml]
