--- a/config/model_configs/single_column_hydrostatic_balance_ft64.yml
+++ b/config/model_configs/single_column_hydrostatic_balance_ft64.yml
@@ -1,5 +1,5 @@
 dz_bottom: 30.0
-dt_save_to_disk: "5days"
+dt_save_state_to_disk: "5days"
 initial_condition: "IsothermalProfile"
 config: "column"
 hyperdiff: "false"
