--- a/config/model_configs/single_column_nonorographic_gravity_wave.yml
+++ b/config/model_configs/single_column_nonorographic_gravity_wave.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "400secs"
+dt_save_state_to_disk: "400secs"
 initial_condition: "IsothermalProfile"
 t_end: "1500secs"
 config: "column"
