--- a/config/model_configs/single_column_radiative_equilibrium_gray.yml
+++ b/config/model_configs/single_column_radiative_equilibrium_gray.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "100days"
+dt_save_state_to_disk: "100days"
 initial_condition: "IsothermalProfile"
 hyperdiff: "false"
 z_elem: 70
