--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist.yml
@@ -1,5 +1,5 @@
 precip_model: "0M"
-dt_save_to_disk: "2days"
+dt_save_state_to_disk: "2days"
 regression_test: true
 initial_condition: "MoistBaroclinicWave"
 dt: "450secs"
