--- a/config/model_configs/sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth.yml
+++ b/config/model_configs/sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "1days"
+dt_save_state_to_disk: "1days"
 rayleigh_sponge: true
 topo_smoothing: true
 initial_condition: "MoistBaroclinicWave"
