--- a/config/model_configs/sphere_zalesak_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist.yml
+++ b/config/model_configs/sphere_zalesak_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "5days"
+dt_save_state_to_disk: "5days"
 initial_condition: "MoistBaroclinicWave"
 max_newton_iters_ode: 4
 dt: "400secs"
