--- a/config/perf_configs/flame_perf_target_diagnostic_edmfx.yml
+++ b/config/perf_configs/flame_perf_target_diagnostic_edmfx.yml
@@ -1,4 +1,4 @@
-dt_save_to_disk: "600secs"
+dt_save_state_to_disk: "600secs"
 vert_diff: "false"
 turbconv: "diagnostic_edmfx"
 edmfx_entr_model: "Generalized"
