--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_impvdiff.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_impvdiff.yml
@@ -11,3 +11,18 @@ t_end: "6days"
 job_id: "sphere_baroclinic_wave_rhoe_equilmoist_impvdiff"
 moist: "equil"
 toml: [toml/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.toml]
+diagnostics:
+  - short_name: pfull
+    period: 12hours
+  - short_name: rv
+    period: 12hours
+  - short_name: wa
+    period: 12hours
+  - short_name: va
+    period: 12hours
+  - short_name: pfull
+    period: 12hours
+  - short_name: ta
+    period: 12hours
+  - short_name: hus
+    period: 12hours
