--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -197,15 +197,6 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_hydrostatic_balance_rhoe_ft64.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_hydrostatic_balance_rhoe_ft64
-          --out_dir sphere_hydrostatic_balance_rhoe_ft64
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_hydrostatic_balance_rhoe_ft64
-          --fig_dir sphere_hydrostatic_balance_rhoe_ft64
-          --case_name dry_held_suarez
         artifact_paths: "sphere_hydrostatic_balance_rhoe_ft64/*"
         agents:
           slurm_mem: 20GB
@@ -215,31 +206,12 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_baroclinic_wave_rhoe --out_dir sphere_baroclinic_wave_rhoe
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_baroclinic_wave_rhoe --fig_dir sphere_baroclinic_wave_rhoe
-          --case_name dry_baroclinic_wave
         artifact_paths: "sphere_baroclinic_wave_rhoe/*"
 
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_baroclinic_wave_rhoe_equilmoist
-          --out_dir sphere_baroclinic_wave_rhoe_equilmoist
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_baroclinic_wave_rhoe_equilmoist
-          --fig_dir sphere_baroclinic_wave_rhoe_equilmoist --case_name moist_baroclinic_wave
-
-          julia --color=yes --project=examples regression_tests/test_mse.jl
-          --job_id sphere_baroclinic_wave_rhoe_equilmoist
-          --out_dir sphere_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist/*"
         agents:
           slurm_constraint: icelake|cascadelake|skylake|epyc
@@ -248,28 +220,12 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_baroclinic_wave_rhoe_equilmoist_expvdiff
-          --out_dir sphere_baroclinic_wave_rhoe_equilmoist_expvdiff
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_baroclinic_wave_rhoe_equilmoist_expvdiff
-          --fig_dir sphere_baroclinic_wave_rhoe_equilmoist_expvdiff --case_name aquaplanet
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_expvdiff/*"
-      
+
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist implicit vertdiff"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist_impvdiff.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_baroclinic_wave_rhoe_equilmoist_impvdiff
-          --out_dir sphere_baroclinic_wave_rhoe_equilmoist_impvdiff
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_baroclinic_wave_rhoe_equilmoist_impvdiff
-          --fig_dir sphere_baroclinic_wave_rhoe_equilmoist_impvdiff --case_name aquaplanet
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_impvdiff/*"
 
       # Add this back when we figure out what to do with SSP and zalesak
@@ -277,15 +233,6 @@ steps:
       #   command: >
       #     julia --color=yes --project=examples examples/hybrid/driver.jl
       #     --config_file $CONFIG_PATH/$$JOB_NAME.yml
-
-      #     julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-      #     --data_dir $$JOB_NAME
-      #     --out_dir $$JOB_NAME
-
-      #     julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-      #     --nc_dir $$JOB_NAME
-      #     --fig_dir $$JOB_NAME --case_name moist_baroclinic_wave
-
       #   artifact_paths: "$$JOB_NAME/*"
       #   agents:
       #     slurm_mem: 64GB
@@ -293,7 +240,8 @@ steps:
       #     JOB_NAME: "sphere_zalesak_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist"
 
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist check conservation float64"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64.yml"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64.yml
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64/*"
 
       - label: ":computer: held suarez (ρe) hightop"
@@ -301,27 +249,12 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_hightop.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_hightop --out_dir sphere_held_suarez_rhoe_hightop
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_held_suarez_rhoe_hightop --fig_dir sphere_held_suarez_rhoe_hightop
-          --case_name dry_held_suarez
         artifact_paths: "sphere_held_suarez_rhoe_hightop/*"
 
       - label: ":computer: no lim ARS held suarez (ρe) equilmoist hightop sponge"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_hightop_sponge.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_hightop_sponge
-          --out_dir sphere_held_suarez_rhoe_equilmoist_hightop_sponge
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_held_suarez_rhoe_equilmoist_hightop_sponge
-          --fig_dir sphere_held_suarez_rhoe_equilmoist_hightop_sponge --case_name moist_held_suarez
 
           julia --color=yes --project=examples regression_tests/test_mse.jl
           --job_id sphere_held_suarez_rhoe_equilmoist_hightop_sponge
@@ -337,14 +270,6 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res
-          --out_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res
-          --fig_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res --case_name aquaplanet
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res/*"
         agents:
           slurm_mem: 20GB
@@ -353,15 +278,6 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric
-          --out_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric
-          --fig_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric
-          --case_name aquaplanet
 
           julia --color=yes --project=examples regression_tests/test_mse.jl
           --job_id sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric
@@ -378,30 +294,18 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_topography_dcmip_rs.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_baroclinic_wave_rhoe_topography_dcmip_rs
-          --out_dir sphere_baroclinic_wave_rhoe_topography_dcmip_rs
         artifact_paths: "sphere_baroclinic_wave_rhoe_topography_dcmip_rs/*"
 
       - label: ":computer: held suarez (ρe) topography (dcmip)"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_topography_dcmip.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_topography_dcmip
-          --out_dir sphere_held_suarez_rhoe_topography_dcmip
         artifact_paths: "sphere_held_suarez_rhoe_topography_dcmip/*"
 
       - label: ":computer: held suarez (ρe) equilmoist topography (dcmip)"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_held_suarez_rhoe_equilmoist_topography_dcmip.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_held_suarez_rhoe_equilmoist_topography_dcmip
-          --out_dir sphere_held_suarez_rhoe_equilmoist_topography_dcmip
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_topography_dcmip/*"
         agents:
           slurm_mem: 20GB
@@ -410,30 +314,12 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200
-          --out_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200
-          --fig_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200
-          --case_name elevation_spectrum
         artifact_paths: "sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200/*"
 
       - label: ":computer: Diagnostic Earth surface elevation spectra"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth.yml
-
-          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
-          --data_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth
-          --out_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth
-
-          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
-          --nc_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth
-          --fig_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth
-          --case_name elevation_spectrum
         artifact_paths: "sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth/*"
 
   - group: "MPI Examples"
@@ -455,6 +341,8 @@ steps:
         key: "restart_mpi_baro_wave"
         depends_on: "mpi_baro_wave_make_restart"
         command: >
+          tar xvf mpi_make_restart/hdf5_files.tar -C mpi_make_restart
+
           srun julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $MPI_CONFIG_PATH/restart_mpi_baroclinic_wave_rhoe.yml
         artifact_paths: "restart_mpi_baroclinic_wave_rhoe/*"
@@ -496,6 +384,8 @@ steps:
         key: "remap_pipeline"
         depends_on: "prep_remap"
         command: >
+          tar xvf prep_remap/hdf5_files.tar -C prep_remap
+
           julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
           --data_dir prep_remap/ --out_dir remap_pipeline_output
         artifact_paths: "remap_pipeline_output/*"
@@ -701,10 +591,14 @@ steps:
 
       - label: "GPU: compare BW with CPU"
         command: >
+          tar xvf sphere_baroclinic_wave_rhoe/hdf5_files.tar -C sphere_baroclinic_wave_rhoe
+
+          tar xvf gpu_baroclinic_wave_rhoe/hdf5_files.tar -C gpu_baroclinic_wave_rhoe
+
           julia --color=yes --project=examples post_processing/compare_outputs.jl
           --output_folder_1 sphere_baroclinic_wave_rhoe/
           --output_folder_2 gpu_baroclinic_wave_rhoe/ --t_end 10days
-          --compare_state false --compare_diagnostics false
+          --compare_state false
         depends_on:
           - "sphere_baroclinic_wave_rhoe"
           - "gpu_baroclinic_wave_rhoe"
@@ -720,10 +614,14 @@ steps:
 
       - label: "GPU: compare HS (ρe) hightop with CPU"
         command: >
+          tar xvf sphere_held_suarez_rhoe_hightop/hdf5_files.tar -C sphere_held_suarez_rhoe_hightop
+
+          tar xvf gpu_held_suarez_rhoe_hightop/hdf5_files.tar -C gpu_held_suarez_rhoe_hightop
+
           julia --color=yes --project=examples post_processing/compare_outputs.jl
           --output_folder_1 sphere_held_suarez_rhoe_hightop/
           --output_folder_2 gpu_held_suarez_rhoe_hightop/
-          --t_end 8days --compare_state false --compare_diagnostics false
+          --t_end 8days --compare_state false
         depends_on:
           - "sphere_held_suarez_rhoe_hightop"
           - "gpu_held_suarez_rhoe_hightop"
