--- a/config/model_configs/plane_agnesi_mountain_test_stretched.yml
+++ b/config/model_configs/plane_agnesi_mountain_test_stretched.yml
@@ -10,8 +10,7 @@ x_elem: 80
 dz_bottom: 200.0
 use_reference_state: false
 config: "plane"
-kappa_4_vorticity: 1.0e6
-kappa_4_tracer: 1.0e6
+hyperdiff: "false"
 z_max: 25000.0
 topography: "Agnesi"
 job_id: "plane_agnesi_mountain_test_stretched"
