--- a/config/model_configs/plane_schar_mountain_test_stretched.yml
+++ b/config/model_configs/plane_schar_mountain_test_stretched.yml
@@ -11,8 +11,8 @@ dz_bottom: 200.0
 use_reference_state: false
 ode_algo: "SSP33ShuOsher"
 config: "plane"
-kappa_4_vorticity: 5.0e7
-kappa_4_tracer: 5.0e7
+kappa_4_vorticity: 0.5
+kappa_4_scalar: 0.5
 z_max: 25000.0
 topography: "Schar"
 job_id: "plane_schar_mountain_test_stretched"
