--- a/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
@@ -8,3 +8,14 @@ h_elem: 16
 precip_model: "0M"
 job_id: "longrun_bw_rhoe_equil_highres"
 moist: "equil"
+diagnostics:
+  - short_name: pfull
+    period: 1days
+  - short_name: wa
+    period: 1days
+  - short_name: va
+    period: 1days
+  - short_name: rv
+    period: 1days
+  - short_name: hus
+    period: 1days
