--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.yml
@@ -11,16 +11,16 @@ moist: "equil"
 toml: [toml/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.toml]
 diagnostics:
   - short_name: pfull
-    period: 12hours
+    period: 6hours
   - short_name: rv
-    period: 12hours
-  - short_name: wa
-    period: 12hours
+    period: 6hours
+  - short_name: ua
+    period: 6hours
   - short_name: va
-    period: 12hours
-  - short_name: pfull
-    period: 12hours
+    period: 6hours
+  - short_name: wa
+    period: 6hours
   - short_name: ta
-    period: 12hours
+    period: 6hours
   - short_name: hus
-    period: 12hours
+    period: 6hours
